# agentS-bytebot

./: .gitignore  CLAUDE.md  INTEGRATION.md  main.py  plan.md  pyproject.toml  run_eval.sh
Agent-S/gui_agents/s3/: cli_app.py  cli_app_remote.py
Agent-S/gui_agents/s3/agents/: grounding.py
Agent-S/gui_agents/s3/core/: engine.py
Agent-S/gui_agents/s3/remote/: bytebot_client.py  bytebot_env.py  remote_pyautogui.py
Agent-S/osworld_setup/s3/: lib_run_single.py  run_local.py
